force-app/main/default/objects/COM_Location_Price__c/COM_Location_Price__c.object-meta.xml
<CustomObject>
    <description>COM:  Supports location based pricing for Comms Cloud on Core</description>
    <label>Location Pricing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>