force-app/main/default/objects/COM_Location_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Location_Price</relationshipName>
    <type>Lookup</type>
</CustomField>