force-app/main/default/objects/COM_Location_Price__c/fields/Product_Selling_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Selling_Model__c</fullName>
    <label>Product Selling Model</label>
    <referenceTo>ProductSellingModel</referenceTo>
    <relationshipName>Location_Price</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>