force-app/main/default/objects/COM_Location_Price__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>